# spotisyaspy

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
spotisyaspy/: __init__.py  spotisyaspy.py
tests/: test_spotisyaspy.py
