# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[git]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotisyaspy"
authors = [
  { name="Pethő Gergely", email="pagstudium@gmail.com" },
]
description = "SpotIsyAsPy - An object-oriented wrapper for the Spotify API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "flask>=2.3.2",
    "tqdm>=4.66.1",
]
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE.md"]

[project.urls]
"Homepage" = "https://github.com/gpetho/spotisyaspy"
"Bug Tracker" = "https://github.com/gpetho/spotisyaspy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["spotisyaspy"]

[tool.setuptools_scm] # Add this section
write_to = "spotisyaspy/_version.py" # setuptools_scm will write the version here

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--strict-markers --import-mode=importlib"
testpaths = ["tests"]
